# aval

./: .gitignore  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  THREAT-MODEL.md  api-extractor.base.json  package-lock.json  package.json  playwright.config.ts  playwright.grass-rabbit-codecs.config.ts  playwright.production.config.ts  playwright.reference.config.ts  tsconfig.json  vitest.config.ts  vitest.m9.config.ts
.github/workflows/: ci.yml  publish.yml  release-candidate.yml  release-final.yml  release-reports.yml  rollback.yml  scheduled-hardening.yml
apps/playground/: certification.html  index.html  m7-http-fixture-plugin.ts  m8-bfcache.html  m8-dev-entry.html  m8-http-fixture-plugin.ts  m8-no-js.html  m8-strict-csp.html  package.json  v1-http-fixture-plugin.ts  vite.config.ts  vite.production-entries.ts  (+2 more)
docs/: accessibility-and-motion.md  browser-support.md  compiler.md  element-api.md  network-and-integrity.md  performance-and-budgets.md  quick-start.md  security.md  states-and-triggers.md  troubleshooting.md  versioning.md
flutter/: .gitignore  ARCHITECTURE.md
flutter/rust/aval_decode/: Cargo.toml  build.rs
flutter/rust/aval_decode/src/: adapter.rs  decoder.rs  error.rs  ffi.rs  ledger.rs  lib.rs  sample_sequence.rs  yuv.rs
flutter/rust/aval_decode/src/vt/: videotoolbox_decoder.m
flutter/rust/aval_decode/tests/: decode_fixture.rs
flutter/rust/aval_decode/tests/fixtures/: sample_cbp.h264
schemas/: candidate-manifest.schema.json  certification-attachment.schema.json  certification-display.schema.json  certification-runtime.schema.json  fixture-provenance.schema.json  publication-ledger.schema.json  release-manifest.schema.json
(+374 files in other folders)
